<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">
    <ListPreference
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_section_key"
        android:title="@string/settings_section_label" />
    <ListPreference
        android:defaultValue="@string/settings_star_rating_default"
        android:entries="@array/settings_order_by_star_rating_labels"
        android:entryValues="@array/settings_order_by_star_rating_values"
        android:key="@string/settings_star_rating_key"
        android:title="@string/settings_star_rating_label" />
    <EditTextPreference
        android:defaultValue="@string/settings_page_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_page_label" />
</PreferenceScreen>
